# aether-os

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DECISIONS.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
aether/: __init__.py  cli.py  session.py
aether/kernel/: __init__.py  evals.py  governance.py  memory.py  orchestrator.py  skills.py  tracking.py
docs/: skill-format.md
skills/evaluator/: SKILL.md
skills/researcher/: SKILL.md
skills/skill-forge/: SKILL.md
tests/: test_memory.py  test_session_evals_tracking.py
